# backend_game

./: .gitignore  Cargo.toml  tes.js
migrations/2025-06-19-144344_create_users/: up.sql
migrations/2025-06-19-144441_create_fields/: down.sql  up.sql
migrations/2025-06-19-144502_create_crops/: down.sql  up.sql
migrations/2025-06-19-144514_create_items/: up.sql
migrations/2025-06-19-144528_create_tools/: down.sql  up.sql
migrations/2025-06-19-144547_create_inventory_items/: down.sql  up.sql
migrations/2025-06-30-205559_create_crops_and_growth_stages/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/controllers/: crop_controller.rs  field_controller.rs  item_controller.rs  mod.rs  user_controller.rs
src/models/: crop.rs  field.rs  inventory_item.rs  item.rs  mod.rs  tool.rs  user.rs
src/routes/: crop_route.rs  field_route.rs  item_route.rs  mod.rs  user_route.rs
src/services/: crop_service.rs  field_service.rs  item_service.rs  mod.rs  user_service.rs
