[package]
name = "p2e_farming_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
bigdecimal = {version ="0.4.8", features = ["serde"]  }
rust_decimal = "1.37.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio-native-tls", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "1", features = ["v4"] }

anyhow = "1.0"
thiserror = "1.0"

axum-extra = { version = "0.10.1", features = ["cookie"] }
diesel = { version = "2.2.11", features = ["postgres", "chrono", "serde_json", "r2d2"] }
dotenvy = "0.15.7"
